# cctv_backend

./: .gitignore  Dockerfile  Makefile  README.md  alembic.ini  celery_worker.py  compose.yml  config.py  env.example  pyproject.toml  start.py  test_connections.py
alembic/: env.py  script.py.mako
alembic/versions/: 0119c6cd97c7_add_profile_images_to_users.py  563bbcfd5bd0_initial_migration_updated_camera_model_.py  66a1db03ea6d_initial_dbs.py  6f66e43a6c94_update_frame_rate_to_60fps.py  add_face_embedding_columns.py
app/: __init__.py  main.py
app/api/v1/: __init__.py  cameras.py  streams.py  users.py
app/core/: celery_app.py  config.py  database.py  face_detection_config.py
app/models/database/: __init__.py  base.py  camera.py  user.py
app/schemas/: camera.py  user.py
app/services/: redis_service.py
app/services/camera/: __init__.py  camera_service.py
app/services/face_recognition/: __init__.py  face_service.py
app/services/streaming/: __init__.py  stream_service.py
app/services/user/: user_service.py
