[project]
name = "smart-attendance-backend"
version = "0.1.0"
description = "Production-level FastAPI backend for RTSP camera management with facial recognition"
authors = [
    {name = "Raja Singh",email = "rajasgh18@gmail.com"}
]
readme = "README.md"
requires-python = "3.12.11"
dependencies = [
    "fastapi (>=0.116.1,<0.117.0)",
    "uvicorn[standard] (>=0.35.0,<0.36.0)",
    "sqlalchemy (>=2.0.43,<3.0.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
    "alembic (>=1.16.4,<2.0.0)",
    "pydantic[email] (>=2.11.7,<3.0.0)",
    "pydantic-settings (>=2.10.1,<3.0.0)",
    "opencv-python (>=4.12.0.88,<5.0.0.0)",
    "pillow (>=11.3.0,<12.0.0)",
    "python-dotenv (>=1.1.1,<2.0.0)",
    "loguru (>=0.7.3,<0.8.0)",
    "asyncpg (>=0.29.0,<0.30.0)",
    "redis (>=5.0.1,<6.0.0)",
    "httpx (>=0.25.2,<0.26.0)",
    "websockets (>=12.0,<13.0)",
    "python-multipart (>=0.0.6,<0.1.0)",
    "passlib[bcrypt] (>=1.7.4,<2.0.0)",
    "python-jose[cryptography] (>=3.3.0,<4.0.0)",
    "python-multipart (>=0.0.6,<0.1.0)",
    "aiofiles (>=23.2.1,<24.0.0)",
    "tenacity (>=8.2.3,<9.0.0)",
    "structlog (>=23.2.0,<24.0.0)",
    "tensorflow (>=2.20.0,<3.0.0)",
    "mtcnn (>=1.0.0,<2.0.0)",
    "faiss-cpu (>=1.12.0,<2.0.0)"
]

[project.optional-dependencies]
dev = [
    "pytest (>=7.4.3,<8.0.0)",
    "pytest-asyncio (>=0.21.1,<0.22.0)",
    "pytest-cov (>=4.1.0,<5.0.0)",
    "black (>=23.11.0,<24.0.0)",
    "isort (>=5.12.0,<6.0.0)",
    "flake8 (>=6.1.0,<7.0.0)",
    "mypy (>=1.7.1,<2.0.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py312']

[tool.poetry]
package-mode = false

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
